infrastructure/controllers/production/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: longhorn-tls
      hosts:
        - longhorn.ronaldlokers.nl
  rules:
    - host: longhorn.ronaldlokers.nl
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
